pages/index.css
body {
  margin: 0;
  padding: 0;
  background-color: #0c0c0c;
  --primary: #2361e0;
}

::-webkit-scrollbar {
  height: 0.4rem;
  width: 0.4rem;
}

::-webkit-scrollbar-track {
  background: #2b2b2b;
}

::-webkit-scrollbar-thumb {
  background: #5f5f5f;
}

::-webkit-scrollbar-thumb:hover {
  background: var(--primary);
}

#nprogress .bar {
  background: var(--primary);
}

#nprogress .spinner {
  display: none;
}

.video-js .vjs-control-bar {
  background: #0c0c0c;
}

.vjs-menu-button-popup .vjs-menu .vjs-menu-content {
  background-color: #1d1d1d;
}

.vjs-menu li.vjs-menu-item:focus, .vjs-menu li.vjs-menu-item:hover {
  background-color: var(--primary);
}

.vjs-menu li.vjs-selected, .vjs-menu li.vjs-selected:focus, .vjs-menu li.vjs-selected:hover {
  color: #ffffff;
  background-color: var(--primary);
}

.video-js .vjs-play-progress {
  background-color: var(--primary);
}

.vjs-texttrack-settings {
  display: none;
}

.vjs-menu-button-popup .vjs-menu {
  width: 20em;
  left: -12em;
}

.vjs-menu li {
  padding: 0.4rem;
  font-size: 0.8rem;
  text-transform: initial;
}

.vjs-menu-button-popup .vjs-menu .vjs-menu-content {
  max-height: 25em;
}

.vjs-menu-item-text::first-letter {
  text-transform: uppercase;
}

.vjs-text-track-display div {
  font-size: 0.8em;
  background-color: transparent!important;
  text-shadow: 0 2px 6px rgba(0, 0, 0, 0.678);
  font-weight: 600;
}

